turmites.lessons.turmites.langton.Langton.scala.code
def brosse(couleur:Color)
{
	setCouleurBrosse(couleur); poseBrosse(); leveBrosse()
}

def step() 
{
	getCouleurSol() match
	{
		case Color.black => brosse(Color.white); droite(); avance()
		case Color.white => brosse(Color.black); gauche(); avance()
	}
}
